--- a/css/design.css
+++ b/css/design.css
@@ -51,13 +51,30 @@ body {
 
 .container {
   width: 98%;
-  max-width: 768px;
+  max-width: 1024px;
   position: relative;
   display: flex;
   flex-direction: column;
   overflow: hidden;
 }
 
+.side-menu {
+  width: 35%;
+  height: 80lvh;
+  display: none;
+  position: fixed;
+  top: 10%;
+  left: 5%;
+}
+
+@media screen and (min-width: 1024px) {
+  .media-container {
+    width: 50%;
+  }
+  .side-menu {
+    display: block;
+  }
+}
 .smoke-top {
   background-image: linear-gradient(to bottom, rgb(255, 255, 255), rgba(255, 255, 255, 0));
   position: fixed;
@@ -183,6 +200,11 @@ header {
   cursor: pointer;
 }
 
+@media screen and (min-width: 1024px) {
+  .hamburger-menu {
+    display: none;
+  }
+}
 .hamburger-menu_bar {
   display: inline-block;
   width: 50%;
@@ -243,17 +265,27 @@ header {
   flex-direction: column;
 }
 
-.navigation_list {
+.navigation-list {
   list-style: none;
   padding: 0;
   margin: 0;
+  line-height: 1.3;
 }
 
-.navigation_link {
+.navigation-link {
   color: #48575e;
   text-decoration: none;
   display: block;
   padding: 8px 0;
+}
+
+.side-navigation-link {
+  color: #48575e;
+  text-decoration: none;
+  display: block;
+  padding: 8px 0;
+  width: -moz-fit-content;
+  width: fit-content;
 }
 
 /* メイン ------------------------------ */
@@ -544,6 +576,9 @@ header {
   width: 80%;
   max-width: 600px;
   border-radius: 24px;
+  padding: 10px 10px 20px 10px;
+  display: flex;
+  flex-direction: column;
 }
 
 .area-footer {
