--- a/css/design.css
+++ b/css/design.css
@@ -64,11 +64,11 @@ body {
 }
 
 .side-menu {
-  width: 35%;
+  width: 40%;
   height: 80lvh;
   display: none;
   position: fixed;
-  top: 10%;
+  top: 5%;
   left: 5%;
 }
 
@@ -174,6 +174,7 @@ header {
   position: fixed;
   width: 100%;
   z-index: 100;
+  background-color: rgba(255, 255, 255, 0);
 }
 
 .header-color {
@@ -189,6 +190,7 @@ header {
   font-size: 24px;
   padding-left: 16px;
   display: flex;
+  z-index: 100;
   flex-direction: row;
   align-items: center;
 }
@@ -196,6 +198,7 @@ header {
 .hamburger-menu {
   width: 50px;
   height: 50px;
+  z-index: 100;
   position: relative;
   border: none;
   background: transparent;
@@ -253,15 +256,16 @@ header {
   display: none;
   background: #fbcb7b;
   position: absolute;
-  top: 50px;
-  height: 100lvh;
+  top: 0px;
   left: 0;
   width: 100%;
+  height: 100lvh;
   z-index: 90;
 }
 
 .navi-container {
   margin: 0 auto;
+  padding-top: 50px;
   width: 90%;
   height: 100%;
   max-width: 1024px;
@@ -271,23 +275,23 @@ header {
 }
 
 .navigation-list {
+  font-size: 16px;
   list-style: none;
-  padding: 8px 0 0 0;
+  padding: 0 0 0 0;
   margin: 0;
-  line-height: 1.3;
+  line-height: 1.2;
 }
 
 .navigation-link {
   color: white;
   text-decoration: none;
   display: block;
-  padding: 8px 0;
   width: -moz-fit-content;
   width: fit-content;
   background-color: #eb5e30;
   border-radius: 24px;
   padding: 4px 8px;
-  margin-bottom: 6px;
+  margin: 8px 0 8px 8px;
 }
 
 .side-navigation-link {
@@ -301,6 +305,20 @@ header {
   border-radius: 24px;
   padding: 4px 8px;
   margin-bottom: 6px;
+}
+
+.main-menu {
+  background-image: url("../images/selif.svg");
+  background-size: contain;
+  background-repeat: no-repeat;
+  position: relative;
+  width: 250px;
+  margin-left: -8%;
+  z-index: 110;
+  text-align: center;
+  color: #eb5e30;
+  padding-top: 20px;
+  font-size: 18px;
 }
 
 /* メイン ------------------------------ */
@@ -550,14 +568,14 @@ header {
 
 .plan-title {
   text-align: center;
-  font-size: clamp(16px, 6vw, 64px);
+  font-size: clamp(16px, 6vw, 48px);
   line-height: 1.3;
 }
 
 .option-title {
   text-align: center;
   line-height: 1;
-  font-size: clamp(16px, 4vw, 48px);
+  font-size: clamp(16px, 4vw, 32px);
 }
 
 .button-plus {
@@ -623,6 +641,10 @@ header {
   padding: 10px 10px 20px 10px;
   display: flex;
   flex-direction: column;
+}
+
+.modal-image {
+  height: 30lvh;
 }
 
 .area-footer {
