--- a/css/design.scss
+++ b/css/design.scss
@@ -64,11 +64,11 @@ body {
     overflow: hidden;
 }
 .side-menu {
-    width: 35%;
+    width: 40%;
     height: 80lvh;
     display: none;
     position: fixed;
-    top: 10%;
+    top: 5%;
     left: 5%;
 }
 @media screen and (min-width: 1024px) {
@@ -161,6 +161,7 @@ header {
     position: fixed;
     width: 100%;
     z-index: 100;
+    background-color: rgba($color: white, $alpha: 0.0)
 }
 .header-color {
     background-color: rgba($color: white, $alpha: 0.0)
@@ -173,12 +174,14 @@ header {
     font-size: 24px;
     padding-left: 16px;
     display: flex;
+    z-index: 100;
     flex-direction: row;
     align-items: center;
 }
 .hamburger-menu {
     width: 50px;
     height: 50px;
+    z-index: 100;
     position: relative;
     border: none;
     background: transparent;
@@ -225,14 +228,15 @@ header {
     display: none;
     background: $secondary-color;
     position: absolute;
-    top: 50px;
-    height: 100lvh;
+    top: 0px;
     left: 0;
     width: 100%;
+    height: 100lvh;
     z-index: 90;
 }
 .navi-container {
     margin: 0 auto;
+    padding-top: 50px;
     width: 90%;
     height: 100%;
     max-width: 1024px;
@@ -241,21 +245,21 @@ header {
     flex-direction: column;
 }
 .navigation-list {
+    font-size: 16px;
     list-style: none;
-    padding: 8px 0 0 0;
+    padding: 0 0 0 0;
     margin: 0;
-    line-height: 1.3;
+    line-height: 1.2;
 }
 .navigation-link {
     color: white;
     text-decoration: none;
     display: block;
-    padding: 8px 0;
     width: fit-content;
     background-color: $primary-color;
     border-radius: 24px;
     padding: 4px 8px;
-    margin-bottom: 6px;
+    margin: 8px 0 8px 8px;
 }
 .side-navigation-link {
     color: white;
@@ -267,6 +271,19 @@ header {
     border-radius: 24px;
     padding: 4px 8px;
     margin-bottom: 6px;
+}
+.main-menu {
+    background-image: url("../images/selif.svg");
+    background-size: contain;
+    background-repeat: no-repeat;
+    position: relative; 
+    width: 250px;
+    margin-left: -8%;
+    z-index: 110;
+    text-align: center;
+    color: $primary-color;
+    padding-top: 20px;
+    font-size: 18px;
 }
 /* メイン ------------------------------ */
 .bg {
@@ -484,13 +501,13 @@ header {
 }
 .plan-title {
     text-align: center;
-    font-size: clamp(16px, 6vw, 64px);
+    font-size: clamp(16px, 6vw, 48px);
     line-height: 1.3;
 }
 .option-title {
     text-align: center;
     line-height: 1;
-    font-size: clamp(16px, 4vw, 48px);
+    font-size: clamp(16px, 4vw, 32px);
 }
 .button-plus {
     position: absolute;
@@ -542,6 +559,9 @@ header {
     padding: 10px 10px 20px 10px;
     display: flex;
     flex-direction: column;
+}
+.modal-image {
+    height: 30lvh;
 }
 .area-footer {
     width: 100%;
