--- a/css/mugix.css
+++ b/css/mugix.css
@@ -74,6 +74,26 @@ body {
   line-height: 2;
 }
 
+.orange {
+  background-color: #eb5e30;
+  color: white;
+  padding: 70px 8px 100px 8px;
+  font-size: 1em;
+}
+
+.beige {
+  background-color: #fbcb7b;
+  color: #48575e;
+  padding: 70px 8px 100px 8px;
+  font-size: 1em;
+  line-height: 2;
+}
+
+a {
+  text-decoration: none;
+  color: #eb5e30;
+}
+
 .left-frame {
   border-left: 10px solid #eb5e30;
   padding-left: 12px;
@@ -177,6 +197,15 @@ header {
   display: flex;
   flex-direction: column;
   padding: 4px 8px;
+}
+
+.menu-2 {
+  background-color: #fbcb7b;
+  border-radius: 24px;
+  margin: 8px 4px 100px 4px;
+  padding: 24px 16px;
+  line-height: 2;
+  border: 4px solid white;
 }
 
 .button-small {
