--- a/css/mugix.scss
+++ b/css/mugix.scss
@@ -72,6 +72,23 @@ body {
     margin-bottom: 24px;
     line-height: 2;
 }
+.orange {
+    background-color: $primary-color;
+    color: white;
+    padding: 70px 8px 100px 8px;
+    font-size: 1em;
+}
+.beige {
+    background-color: $secondary-color;
+    color: $font-color;
+    padding: 70px 8px 100px 8px;
+    font-size: 1em;
+    line-height: 2;
+}
+a {
+    text-decoration: none;
+    color: $primary-color;
+}
 .left-frame {
     border-left: 10px solid $primary-color;
     padding-left: 12px;
@@ -164,6 +181,14 @@ header {
     display: flex;
     flex-direction: column;
     padding: 4px 8px;
+}
+.menu-2 {
+    background-color: $secondary-color;
+    border-radius: 24px;
+    margin: 8px 4px 100px 4px;
+    padding: 24px 16px;
+    line-height: 2;
+    border: 4px solid white;
 }
 .button-small {
     text-decoration: none;
