--- a/css/design.css
+++ b/css/design.css
@@ -15,7 +15,7 @@ a {
 }
 
 .media-border {
-  border: 2px solid #48575e;
+  border: 2px solid rgb(60, 60, 60);
 }
 
 .media-container {
@@ -27,7 +27,7 @@ a {
     font-size: 18px;
   }
   .media-border {
-    border: 3px solid #48575e;
+    border: 3px solid rgb(60, 60, 60);
   }
   .media-container {
     margin: 0 auto;
@@ -38,16 +38,26 @@ a {
     font-size: 20px;
   }
   .media-border {
-    border: 4px solid #48575e;
+    border: 4px solid rgb(60, 60, 60);
   }
   .media-container {
     margin: 0 5% 0 auto;
   }
 }
+h1 {
+  font-weight: bold;
+  font-size: 1.2em;
+}
+
+p {
+  margin: 0;
+}
+
 body {
-  color: #48575e;
-  font-family: "Avenir Next", "Hiragino Sans", sans-serif;
-  font-weight: 600;
+  color: rgb(60, 60, 60);
+  font-family: "Avenir Next", "M PLUS 1p", "Hiragino Sans", sans-serif;
+  font-weight: 500;
+  line-height: 1.5;
   transition: 2s;
   position: relative;
   margin: 0;
@@ -61,6 +71,10 @@ body {
   display: flex;
   flex-direction: column;
   overflow: hidden;
+}
+
+section {
+  width: 100%;
 }
 
 .side-menu {
@@ -217,7 +231,7 @@ header {
   display: inline-block;
   width: 50%;
   height: 3px;
-  background: #48575e;
+  background: rgb(60, 60, 60);
   position: absolute;
   left: 50%;
   transform: translateX(-50%);
@@ -334,40 +348,36 @@ header {
   transform: translateZ(0.01px);
 }
 
-.area-top {
-  width: 100%;
-  height: 100vh;
-  margin-bottom: 8px;
-}
-
 .area {
   width: 100%;
   position: relative;
-  margin-bottom: 8px;
+  margin-bottom: 30px;
 }
 
-.area-orange {
-  width: 100%;
-  padding: 40px 0;
-  position: relative;
-  margin-bottom: 8px;
-  background-color: #eb5e30;
-  border-top: 3px solid #48575e;
-  border-bottom: 3px solid #48575e;
+.leftside {
+  margin: 0 20% 0 10px;
 }
 
-.area-horizon {
+.head {
   width: 100%;
   position: relative;
-  margin-bottom: 8px;
+  margin-bottom: 50px;
+}
+
+.subtitle {
+  width: 80%;
+  margin: 0 auto;
+  display: block;
+  position: relative;
+  z-index: 50;
+}
+
+.horizon {
   display: flex;
   flex-direction: row;
 }
 
-.area-vertical {
-  width: 100%;
-  position: relative;
-  margin-bottom: 8px;
+.vertical {
   display: flex;
   flex-direction: column;
 }
@@ -375,16 +385,7 @@ header {
 .text-box {
   background-color: white;
   padding: 8px;
-  border: 3px solid #48575e;
   border-radius: 12px;
-  position: relative;
-  z-index: 50;
-}
-
-.subtitle {
-  width: 80%;
-  margin: 0 auto;
-  display: block;
   position: relative;
   z-index: 50;
 }
@@ -436,7 +437,6 @@ header {
 .bg-text {
   transform: translateX(-100%);
   transition: 0.5s;
-  font-size: 1.2em;
 }
 
 .bg-palette {
@@ -471,10 +471,15 @@ header {
 }
 
 .news {
+  display: flex;
+  flex-direction: column;
+}
+
+.news-cell {
   background-color: #fbcb7b;
+  padding: 8px;
+  margin: 10px 5% 0 5%;
   border-radius: 24px;
-  margin: 12px 5%;
-  padding: 12px 24px;
   z-index: 30;
 }
 
@@ -500,16 +505,24 @@ header {
   cursor: pointer;
 }
 
-.arrow {
-  width: 10%;
-  margin: 24px auto;
-  display: block;
-}
-
 .pop-sub {
   text-align: center;
   font-size: 1.5em;
   color: white;
+}
+
+.work-number {
+  background-color: #eb5e30;
+  color: white;
+  border-radius: 50%;
+  width: 100px;
+  height: 100px;
+  font-size: 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: 1s;
+  margin: 0 auto 20px auto;
 }
 
 .menu-title {
@@ -518,133 +531,15 @@ header {
   width: -moz-max-content;
   width: max-content;
   font-weight: bold;
-  border-bottom: 10px double #48575e;
   margin: 0 auto;
-}
-
-.plan-slider {
-  width: 100%;
-  margin: 16px auto 64px auto;
-  z-index: 40;
-}
-
-.option-slider {
-  width: 100%;
-  margin: 16px auto 64px auto;
-  z-index: 40;
-}
-
-.plan {
-  width: 80%;
-  aspect-ratio: 1/1;
-  margin: 0 8px;
-  border-radius: 50%;
-  border: 3px solid #48575e;
   position: relative;
-}
-
-.plan-image {
-  width: 100%;
-}
-
-.option {
-  position: relative;
-  width: 40%;
-  aspect-ratio: 1/1;
-  margin: 0 8px;
-  background-color: #fbcb7b;
-  border-radius: 50%;
-  border: 3px solid #48575e;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-
-.plan-top {
-  margin: 5% auto 0 auto;
-  height: 40%;
-}
-
-.plan-title {
   text-align: center;
-  font-size: clamp(16px, 6vw, 48px);
-  line-height: 1.3;
+  z-index: 50;
 }
 
-.option-title {
-  text-align: center;
-  line-height: 1;
-  font-size: clamp(16px, 4vw, 32px);
-}
-
-.button-plus {
-  position: absolute;
-  bottom: 10%;
-  left: 50%;
-  transform: translateX(-50%);
-  width: 25%;
-  height: 25%;
-}
-
-.button-hide {
-  position: absolute;
-  top: -10px;
-  right: -10px;
-  transform: rotateZ(45deg);
-  width: 40px;
-}
-
-.bird-slider {
-  position: absolute;
-  width: 100%;
-  height: 50%;
-  top: 30%;
-  left: -120%;
-  animation: birds 5s linear infinite;
-}
-
-@keyframes birds {
-  0% {
-    left: -120%;
-    top: 60%;
-  }
-  80% {
-    left: -120%;
-    top: 60%;
-  }
-  100% {
-    left: 100%;
-    top: -100%;
-  }
-}
-.modal-frame {
-  position: fixed;
-  z-index: 110;
-  width: 100%;
-  height: 100%;
-  left: 0;
-  top: 0;
-  background-color: rgba(255, 255, 255, 0.7);
-  display: none;
-  align-items: center;
-  justify-content: center;
-}
-
-.modal-content {
-  position: relative;
-  background-color: beige;
-  border: 3px solid #48575e;
-  width: 80%;
-  max-width: 600px;
-  border-radius: 24px;
-  padding: 10px 10px 20px 10px;
-  display: flex;
-  flex-direction: column;
-}
-
-.modal-image {
-  height: 30lvh;
+.work-image {
+  width: 90%;
+  margin: 20px auto;
 }
 
 .area-footer {
@@ -654,7 +549,17 @@ header {
   margin-bottom: 8px;
   text-align: center;
   background-color: #fbcb7b;
-  border-top: 3px solid #48575e;
+  border-top: 3px solid rgb(60, 60, 60);
+}
+
+footer {
+  background-color: grey;
+  padding: 40px 0 60px 0;
+  position: relative;
+  margin-bottom: 8px;
+  text-align: center;
+  z-index: 0;
+  color: white;
 }
 
 /* jquery ---------------------------------- */
@@ -686,6 +591,10 @@ header {
 
 .is-appear {
   transform: scale(1);
+}
+
+.is-flip {
+  transform: rotateX(720deg);
 }
 
 .wani {
