--- a/css/design.css
+++ b/css/design.css
@@ -274,7 +274,7 @@ header {
   top: 0px;
   left: 0;
   width: 100%;
-  height: 100lvh;
+  height: 100dvh;
   z-index: 90;
 }
 
@@ -289,13 +289,6 @@ header {
   flex-direction: column;
 }
 
-.navigation-list {
-  margin: 4px 0;
-  background-color: #eb5e30;
-  border-radius: 24px;
-  padding: 6px 8px 2px 16px;
-}
-
 .navigation-button {
   display: block;
   font-size: 1em;
@@ -305,11 +298,12 @@ header {
   margin: 4px 0;
   background-color: #eb5e30;
   border-radius: 24px;
-  padding: 6px 8px 2px 16px;
+  padding: 4px 8px 0 16px;
 }
 
 .navigation-sub {
   margin: 0 0 0 30px;
+  font-size: 0.8em;
 }
 
 /* メイン ------------------------------ */
