--- a/css/design.scss
+++ b/css/design.scss
@@ -244,7 +244,7 @@ header {
     top: 0px;
     left: 0;
     width: 100%;
-    height: 100lvh;
+    height: 100dvh;
     z-index: 90;
 }
 .navi-container {
@@ -257,12 +257,6 @@ header {
     display: flex;
     flex-direction: column;
 }
-.navigation-list {
-    margin: 4px 0;
-    background-color: $primary-color;
-    border-radius: 24px;
-    padding:6px 8px 2px 16px;
-}
 .navigation-button {
     display: block;
     font-size: 1em;
@@ -272,11 +266,11 @@ header {
     margin: 4px 0;
     background-color: $primary-color;
     border-radius: 24px;
-    padding:6px 8px 2px 16px;
+    padding:4px 8px 0 16px;
 }
 .navigation-sub {
     margin: 0 0 0 30px;
-    
+    font-size: 0.8em;
 }
 /* メイン ------------------------------ */
 .bg {
